2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Add logging on error.

2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amoverview.pl.in: Use shellwords instead of quotewords,
	  don't add date for disk not in the disklist.

2006-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Fix %hd printf argument format.
	* common-src/security-util.c: Fix %hd printf argument format.

2006-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (client_keytab): Add DEBUG_*.
	* oldrecover-src/amrecover.c: Call read_clientconf.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Improve debugging.
	* server-src/changer.c: Make sure to dup the fd out of the 0..2 range.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Pass new prompt_in parameter to
	                             search_tapes.
	* restore-src/restore.c (search_tapes, load_manual_tape): New prompt_in
	                                                          parameter.
	* restore-src/restore.h (search_tapes): New prompt_in parameter.
	* restore-src/amidxtaped.c: Set new 'FILE *' instead of reusing stdin
	                            and stdout.
	* server-src/amindexd.c: Set new 'FILE *' instead of reusing stdin
	                         and stdout.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski <orion@cora.nwra.com>
	* server-src/planner.c: Add a skip_quoted_line() on error.

2006-09-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Fix parsing of 'taper: wrote label' line.
	* server-src/amtoc.pl.in: Fix parsing of 'START taper' line.

2006-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h: New CONFTYPE_INTRANGE conftype_t.
	* common-src/conffile.c: New CNF_RESERVED_UDP_PORT,
	                         CNF_RESERVED_TCP_PORT,